Nutch Change Log

Release nutchgora - Current Development

* NUTCH-1311 Add response headers to datastore for the protocol-httpclient plugin (Dan Rosher via ferdy)

* NUTCH-1304 GeneratorMapper.java dosen't return when skipping and already generated mark (Dan Rosher via lewismc)

* NUTCH-1307 Improve formatting of ant targets for clearer project help (lewismc)

* NUTCH-1302 nutchgora job failures should be noticed by submitter (ferdy)

* NUTCH-1298 Pass numTasks to FetcherJob (Dan Rosher via ferdy)

* NUTCH-1289 In distributed mode URL's are not partitioned (Dan Rosher, ferdy)

* NUTCH-1292 Better exception logging and debugging during fetch. (ferdy)

* NUTCH-1263 FetcherJob must put 'fetchTime' on input (ferdy)

* NUTCH-1296 nutchgora fetcher does not show correct 'threads' and 'resuming' properties (ferdy)

* NUTCH-1295 nutchgora restlet dependencies failing when remote repos is down (ferdy)

* NUTCH-965 Skip parsing for truncated documents (alexis, lewismc, ferdy)

* NUTCH-1287 Upgrade to hsqldb 2.2.8 (ferdy)

* NUTCH-1280 language-identifier should have option to use detected value by Tika even when uncertain (ferdy)

* NUTCH-1246 Upgrade to Hadoop 1.0.0 (lewismc)

* NUTCH-1279 Check if limit has been reached in GeneraterReducer must be the first check performance-wise. (ferdy)

* NUTCH-1255 Change ivy.xml of all plugins to remove "nutch.root" property (ferdy)

* NUTCH-1189 add commented out default settings to gora.properties file (lewismc, Ferdy)

* NUTCH-1138 remove LogUtil from trunk and nutchgora (lewismc)

* NUTCH-1237 Improve javac arguements for more verbose output (lewismc)

* NUTCH-1217 Update NOTICE.txt to drop some copyrights (lewismc)

* NUTCH-1216 Add trivial comment to lib/native/README.txt (lewismc)

* NUTCH-1198 Less verbose logging when unmapped mimetypes are trying to be parsed. (ferdy)

* NUTCH-1196 Update job should impose an upper limit on the number of inlinks (nutchgora) (ferdy)

* NUTCH-1185 Decrease solr.commit.size to 250 (markus)
