@@ -74,6 +74,9 @@ public abstract class HttpBase implements Protocol {
 
   /** The "Accept-Language" request header value. */
   protected String acceptLanguage = "en-us,en-gb,en;q=0.7,*;q=0.3";
+  
+  /** The "Accept" request header value. */
+  protected String accept = "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8";
 
   /** The default logger */
   private final static Logger LOGGER = LoggerFactory.getLogger(HttpBase.class);
@@ -113,6 +116,7 @@ public abstract class HttpBase implements Protocol {
     this.userAgent = getAgentString(conf.get("http.agent.name"), conf.get("http.agent.version"), conf
         .get("http.agent.description"), conf.get("http.agent.url"), conf.get("http.agent.email"));
     this.acceptLanguage = conf.get("http.accept.language", acceptLanguage);
+    this.accept = conf.get("http.accept", accept);
     this.mimeTypes = new MimeUtil(conf);
     this.useHttp11 = conf.getBoolean("http.useHttp11", false);
     this.robots.setConf(conf);
@@ -235,6 +239,10 @@ public abstract class HttpBase implements Protocol {
          return acceptLanguage;
   }
 
+  public String getAccept() {
+         return accept;
+  }
+
   public boolean getUseHttp11() {
     return useHttp11;
   }
@@ -292,6 +300,7 @@ public abstract class HttpBase implements Protocol {
       logger.info("http.content.limit = " + maxContent);
       logger.info("http.agent = " + userAgent);
       logger.info("http.accept.language = " + acceptLanguage);
+      logger.info("http.accept = " + accept);
     }
   }
 
